# spack-installer-cli

./: Makefile  README.md  build_binary.sh  pyproject.toml  pytest.ini  requirements.txt  setup_dev.py  setup_multiuser.sh  spack-installer-worker.service  spack_installer_diagram.txt  spack_installer_entry.py  spack_installer_flow_diagram.txt  spack_installer_simple_diagram.txt
examples/: basic_usage.py  batch_submit.sh
spack_installer/: __init__.py  auth.py  cli.py  client.py  config.py  database.py  models.py  queue_manager.py  scheduler.py  worker.py  worker_daemon.py
