[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spack-installer-api"
version = "1.0.0"
description = "A queuing system for Spack package installations with intelligent job scheduling"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=1.8.0",
    "apscheduler>=3.9.0",
    "psutil>=5.8.0",
    "colorama>=0.4.4",
    "tabulate>=0.9.0",
]

[project.scripts]
spack-installer = "spack_installer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/spack-installer-api"
Repository = "https://github.com/yourusername/spack-installer-api"

[tool.setuptools.packages.find]
where = ["."]
include = ["spack_installer*"]
